inclusão do título

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title> Meu Site </title>
     </head>
     <body>
-    <h1>Testando o Git</h1>
+    <h1>Meu Site</h1>
     </body>
     </html>
